@@ -7,6 +7,7 @@ pod_spelling_system:
   # intentionally
   stopwords:
     - ffi
+    - nullable
 
 pod_coverage:
   skip: 0
